objects/Object_Clone_Mapping__mdt.object
<CustomObject>
    <description>It is use to give the mapping of the custom object field of different object.</description>
    <fields>
        <fullName>Destination_Obj_API_Name__c</fullName>
        <label>Destination Obj API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Obj_Field_API_Name__c</fullName>
        <label>Destination Obj Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Obj_API_Name__c</fullName>
        <label>Src Obj API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Obj_Field_API_Name__c</fullName>
        <label>Src Obj Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ObjectCloneMapping</label>
    <pluralLabel>ObjectCloneMapping</pluralLabel>
</CustomObject>